Fix contest preview detail whitespace.

--- a/src/components/contests/ContestPreview.module.scss
+++ b/src/components/contests/ContestPreview.module.scss
@@ -87,3 +87,7 @@ a, Link {
     text-align: left;
     font-size: 0.75rem;
 }
+
+.detailKey {
+    padding-right: 0.25rem;
+}
